; ModuleID = '/home/carl/AnghaBench/reactos/boot/freeldr/tools/extr_rmkdir.c_MakeDirectory.c'
source_filename = "/home/carl/AnghaBench/reactos/boot/freeldr/tools/extr_rmkdir.c_MakeDirectory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [27 x i8] c"Failed to create directory\00", align 1
@.str.1 = private unnamed_addr constant [27 x i8] c"Failed to change directory\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @MakeDirectory(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca [1024 x i8], align 16
  store i8* %0, i8** %3, align 8
  %5 = getelementptr inbounds [1024 x i8], [1024 x i8]* %4, i64 0, i64 0
  %6 = call i32 @getcwd(i8* %5, i32 1024)
  %7 = load i8*, i8** %3, align 8
  %8 = call i32 @chdir(i8* %7)
  %9 = icmp eq i32 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %1
  %11 = getelementptr inbounds [1024 x i8], [1024 x i8]* %4, i64 0, i64 0
  %12 = call i32 @chdir(i8* %11)
  store i32 0, i32* %2, align 4
  br label %28

13:                                               ; preds = %1
  %14 = load i8*, i8** %3, align 8
  %15 = call i64 (i8*, ...) @mkdir(i8* %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %13
  %18 = call i32 @perror(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0))
  store i32 1, i32* %2, align 4
  br label %28

19:                                               ; preds = %13
  %20 = load i8*, i8** %3, align 8
  %21 = call i32 @chdir(i8* %20)
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %19
  %24 = call i32 @perror(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.1, i64 0, i64 0))
  store i32 1, i32* %2, align 4
  br label %28

25:                                               ; preds = %19
  %26 = getelementptr inbounds [1024 x i8], [1024 x i8]* %4, i64 0, i64 0
  %27 = call i32 @chdir(i8* %26)
  store i32 0, i32* %2, align 4
  br label %28

28:                                               ; preds = %25, %23, %17, %10
  %29 = load i32, i32* %2, align 4
  ret i32 %29
}

declare dso_local i32 @getcwd(i8*, i32) #1

declare dso_local i32 @chdir(i8*) #1

declare dso_local i64 @mkdir(i8*, ...) #1

declare dso_local i32 @perror(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
